# stabkernel

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  wheels.yml
bench/: bench.c  bench_parallel.c  plot.py  results.csv  sweep.sh
include/: gf2kernel.h
python/: stabkernel.py
src/: dispatch.c  gf2_arm.S  gf2_linalg.c  gf2_parallel.c  gf2_scalar.c  gf2_x86.S  wrappers.c
stabkernel/: __init__.py  __main__.py
tests/: test_correctness.c
